# yt_django_docker

./: Dockerfile  pyproject.toml
templates/: index.html
tutorial/: settings.py  urls.py
